Added support for pagination when requesting notifications.
Updated documentation and sdk/example.

Updated package.json dependencies.

Version up to 0.2.
