# notification_service/src/features/persistentNotifications/persistence.route.ts
@@ -1,8 +1,9 @@
 import {Router} from "express";
 
 import {persistenceController} from "./persistence.controller";
-import {authMiddleware} from "@/middlewares";
+import {authMiddleware, dtoValidationMiddleware} from "@/middlewares";
+import {PaginationDto} from "@/features/persistentNotifications/pagination.dto";
 
 export const persistenceRoute = Router();
 
-persistenceRoute.get('/', authMiddleware, persistenceController);
+persistenceRoute.get('/', authMiddleware, dtoValidationMiddleware(PaginationDto, 'query'), persistenceController);
